maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:6: error: illegal start of simple expression
    if (!isFacingWall()) {
    ^