maze.pledge.PledgeMaze.scala.code
override def run() {
  var dir:Int=0;
  while (!isOverBaggle()) {
    left();dir++
    if (!isFacingWall()) {
      forward()
    }
    else {
      right();dir-=1
      if (isFacingWall()) {
        right();dir-=1
        if (isFacingWall()) {
          right();dir--
          forward()
        }
        else {
          forward()
        }
      }
      else {
        forward()
      }
    }
  }
  pickupBaggle()
}